# queens-puzzle

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  manifest  ourjhfl6udcvdltpt8ipr5rhdsnlt0sh.darc
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
core/: Cargo.toml
core/src/: generator.rs  grid.rs  io.rs  lib.rs  puzzle.rs  solver.rs
core/src/generator/: shuffle_queens.rs
core/src/io/: archived_queens.rs  json.rs  text.rs
core/src/solver/: brute_force.rs  rule.rs  rule_hidden_set.rs  rule_mark_empty.rs  rule_mark_queen.rs  rule_naked_set.rs  rule_pointers.rs
docs/: formats.md  prd-fe-design.md  prd-web-ui.md
puzzles/: linkedinPuzzles.json  linkedin_20240921.txt  linkedin_20240926.txt
src/: archived_queens.rs  generator.rs  grid.rs  io.rs  main.rs  puzzle.rs  solver.rs
src/generator/: shuffle_queens.rs
src/io/: archived_queens.rs  text.rs
src/solver/: brute_force.rs  rule.rs  rule_hidden_set.rs  rule_mark_empty.rs  rule_mark_queen.rs  rule_naked_set.rs  rule_pointers.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
web/: CLAUDE.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
web/mockups/: about-modal-mobile.html  about-modal.html  editor-mobile.html  editor.html  generator-mobile.html  generator.html  play-mobile.html  play.html  rules-mobile.html  rules.html  solve-mobile.html  solve.html
web/src/: App.tsx  analysisWorker.ts  generatorWorker.ts  initWasm.ts  main.tsx  queens-puzzle-wasm.d.ts  types.ts  utils.ts  wasmWorker.ts
web/src/components/: AboveBoard.module.css  AboveBoard.tsx  AppShell.module.css  AppShell.tsx  Board.module.css  Board.tsx  ConfirmModal.tsx  EditControls.tsx  GenerateModal.tsx  Grid.module.css  Grid.tsx  HintBar.tsx  ImportModal.tsx  PlayControls.module.css  PlayControls.tsx  SettingsPanel.module.css  SettingsPanel.tsx  SolvedBanner.tsx
web/src/contexts/: SettingsContext.tsx
web/src/data/: rules.ts
web/src/hooks/: useAnalysisWorker.ts
web/src/pages/: EditorPage.module.css  EditorPage.tsx  GeneratorPage.module.css  GeneratorPage.tsx  PlayPage.module.css  PlayPage.tsx  RulesPage.tsx  SolvePage.module.css  SolvePage.tsx
web/src/styles/: globals.css
web/tests/: analysis.test.ts  editor.test.ts  generate.test.ts  generator.test.ts  helpers.ts  play-mode.test.ts  settings-dropdown.test.ts  solve.test.ts
(+1 files in other folders)
