[package]
name = "queens-puzzle"
version = "0.1.0"
edition = "2021"
description = "A solver and generator for the LinkedIn Queens puzzle"
authors = ["Daniel Jones <daniel@daniel-jones.dev>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/daniel-jones-dev/queens-puzzle"
keywords = ["puzzle", "solver", "generator", "queens", "cli"]
categories = ["command-line-utilities", "games"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
colored = "2.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
itertools = "0.14.0"
rand = "0.10.1"
log = "0.4"
env_logger = "0.11"
