[workspace]
members = ["core", "wasm"]
resolver = "2"

[package]
name = "queens-puzzle"
version = "0.1.0"
edition = "2021"
description = "A solver and generator for the LinkedIn Queens puzzle"
authors = ["Daniel Jones <daniel@daniel-jones.dev>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/daniel-jones-dev/queens-puzzle"
keywords = ["puzzle", "solver", "generator", "queens", "cli"]
categories = ["command-line-utilities", "games"]

[[bin]]
name = "queens-puzzle"
path = "src/main.rs"

[dependencies]
queens-puzzle-core = { path = "core" }
clap = { version = "4.6.1", features = ["derive"] }
colored = "2.1.0"
log = "0.4"
env_logger = "0.11"