[package]
name = "queens-puzzle-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for the Queens puzzle"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
queens-puzzle-core = { path = "../core" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
getrandom = { version = "0.4", features = ["wasm_js"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
